--- a/Source/Data Preprocessing.ipynb
+++ b/Source/Data Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "fa994167",
    "metadata": {},
    "outputs": [],
@@ -15,255 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "42860e2d",
+   "execution_count": 4,
+   "id": "77879456",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SBD</th>\n",
-       "      <th>Sở GD</th>\n",
-       "      <th>Toán</th>\n",
-       "      <th>Văn</th>\n",
-       "      <th>Sử</th>\n",
-       "      <th>Địa</th>\n",
-       "      <th>Lí</th>\n",
-       "      <th>Hoá</th>\n",
-       "      <th>Sinh</th>\n",
-       "      <th>Ngoại ngữ</th>\n",
-       "      <th>GDCD</th>\n",
-       "      <th>Năm thi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2000001</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>7.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000002</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>7.25</td>\n",
-       "      <td>6.75</td>\n",
-       "      <td>5.75</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>7.25</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2000003</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>7.75</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>9.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2000004</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>7.50</td>\n",
-       "      <td>7.25</td>\n",
-       "      <td>7.25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>8.50</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2000005</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>6.50</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>8.75</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7995</th>\n",
-       "      <td>2002059</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7996</th>\n",
-       "      <td>2002060</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>6.50</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>6.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>9.00</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7997</th>\n",
-       "      <td>2002061</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>6.75</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>9.50</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7998</th>\n",
-       "      <td>2002062</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>7.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.75</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7999</th>\n",
-       "      <td>2002063</td>\n",
-       "      <td>Sở GD&amp;ĐT Thành Phố Hồ Chí Minh</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>8.25</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>8.25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8000 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          SBD                           Sở GD  Toán   Văn    Sử   Địa    Lí  \\\n",
-       "0     2000001  Sở GD&ĐT Thành Phố Hồ Chí Minh   8.0  7.00   NaN   NaN  7.25   \n",
-       "1     2000002  Sở GD&ĐT Thành Phố Hồ Chí Minh   6.0  7.25  6.75  5.75   NaN   \n",
-       "2     2000003  Sở GD&ĐT Thành Phố Hồ Chí Minh   9.2  7.75   NaN   NaN  8.50   \n",
-       "3     2000004  Sở GD&ĐT Thành Phố Hồ Chí Minh   8.2  7.50  7.25  7.25   NaN   \n",
-       "4     2000005  Sở GD&ĐT Thành Phố Hồ Chí Minh   7.8  6.50  4.50  5.00   NaN   \n",
-       "...       ...                             ...   ...   ...   ...   ...   ...   \n",
-       "7995  2002059  Sở GD&ĐT Thành Phố Hồ Chí Minh   6.0  4.00   NaN   NaN  6.25   \n",
-       "7996  2002060  Sở GD&ĐT Thành Phố Hồ Chí Minh   6.2  6.50  4.00  6.50   NaN   \n",
-       "7997  2002061  Sở GD&ĐT Thành Phố Hồ Chí Minh   6.8  8.00  3.75  6.75   NaN   \n",
-       "7998  2002062  Sở GD&ĐT Thành Phố Hồ Chí Minh   8.0  7.00   NaN   NaN  6.00   \n",
-       "7999  2002063  Sở GD&ĐT Thành Phố Hồ Chí Minh   7.4  8.25  4.75  8.25   NaN   \n",
-       "\n",
-       "      Hoá  Sinh  Ngoại ngữ   GDCD  Năm thi  \n",
-       "0     NaN  5.25        8.2    NaN     2024  \n",
-       "1     NaN   NaN        6.6   7.25     2024  \n",
-       "2     NaN  8.00        9.8    NaN     2024  \n",
-       "3     NaN   NaN        9.4   8.50     2024  \n",
-       "4     NaN   NaN        9.0   8.75     2024  \n",
-       "...   ...   ...        ...    ...      ...  \n",
-       "7995  NaN  3.00        7.2    NaN     2021  \n",
-       "7996  NaN   NaN        7.8   9.00     2021  \n",
-       "7997  NaN   NaN        7.2   9.50     2021  \n",
-       "7998  NaN  5.75        7.6    NaN     2021  \n",
-       "7999  NaN   NaN        8.2  10.00     2021  \n",
-       "\n",
-       "[8000 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# đọc dữ liệu\n",
-    "diemthi_df = pd.read_csv(\"Data/diemthi_21-24.csv\", encoding=\"utf-8\")\n",
-    "diemthi_df"
+    "# os.chdir(r'D:\\University\\Applied Data Science\\ADS_Final')"
    ]
   }
  ],
