--- a/Source/Data Preprocessing.ipynb
+++ b/Source/Data Preprocessing.ipynb
@@ -4390,6 +4390,16 @@
    "source": [
     "df.to_csv(\"Data/diem_chuan_full.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "bee3fd07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"Data/Final/diem_chuan_full.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
   }
  ],
  "metadata": {
