update tab 1 with map. Tab 2 in progress.

--- a/Source/Data Preprocessing.ipynb
+++ b/Source/Data Preprocessing.ipynb
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "id": "fa994167",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\WIN 10\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\fuzzywuzzy\\fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -29,6 +38,10 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
+    "from geopy.geocoders import Nominatim\n",
+    "from geopy.extra.rate_limiter import RateLimiter\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "# tắt warning\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -36,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "id": "7b2fd405",
    "metadata": {},
    "outputs": [],
@@ -4399,6 +4412,194 @@
    "outputs": [],
    "source": [
     "df.to_csv(\"Data/Final/diem_chuan_full.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9598fca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "df = pd.read_csv(\"Data/Final/diem_chuan_full.csv\")\n",
+    "df[\"Tên Trường\"] = df[\"Tên Trường\"].fillna(\"\").str.strip()\n",
+    "\n",
+    "# Lấy danh sách Tên Trường duy nhất\n",
+    "unique_schools = df[\"Tên Trường\"].dropna().unique()\n",
+    "\n",
+    "# Tạo geocoder\n",
+    "geolocator = Nominatim(user_agent=\"vn_university_locator\")\n",
+    "geocode = RateLimiter(geolocator.geocode, min_delay_seconds=1)\n",
+    "\n",
+    "# Kết quả sẽ lưu vào list\n",
+    "results = []\n",
+    "\n",
+    "# Dùng tqdm để có progress bar\n",
+    "for school in tqdm(unique_schools):\n",
+    "    try:\n",
+    "        location = geocode(f\"{school}, Việt Nam\")\n",
+    "        if location:\n",
+    "            lat = location.latitude\n",
+    "            lon = location.longitude\n",
+    "            print(f\"[OK] {school}: ({lat}, {lon})\")\n",
+    "        else:\n",
+    "            lat = None\n",
+    "            lon = None\n",
+    "            print(f\"[Not found] {school}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"[Error] {school}: {e}\")\n",
+    "        lat = None\n",
+    "        lon = None\n",
+    "    \n",
+    "    results.append({\n",
+    "        \"Tên Trường\": school,\n",
+    "        \"Latitude\": lat,\n",
+    "        \"Longitude\": lon\n",
+    "    })\n",
+    "\n",
+    "# Lưu kết quả ra file CSV\n",
+    "df_geo = pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9373be6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tên Trường</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Đại Học Hồng Đức</td>\n",
+       "      <td>19.767931</td>\n",
+       "      <td>105.779331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Đại Học Ngoại Thương (Cơ sở phía Bắc)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Đại Học Sư Phạm Hà Nội 2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Đại Học Ngoại Ngữ – Đại Học Quốc Gia Hà Nội</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Đại Học Kinh Tế Quốc Dân</td>\n",
+       "      <td>20.999746</td>\n",
+       "      <td>105.843497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>283</th>\n",
+       "      <td>Trường Sĩ Quan Thông Tin - Hệ Dân Sự - Đại Học...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>Đại Học Lâm Nghiệp (Cơ sở 3) - Phân hiệu Gia Lai</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>Đại học CMC</td>\n",
+       "      <td>20.980187</td>\n",
+       "      <td>105.766290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>Đại học Ngô Quyền</td>\n",
+       "      <td>20.843096</td>\n",
+       "      <td>106.697770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td></td>\n",
+       "      <td>15.926666</td>\n",
+       "      <td>107.965086</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>288 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Tên Trường   Latitude   Longitude\n",
+       "0                                     Đại Học Hồng Đức  19.767931  105.779331\n",
+       "1                Đại Học Ngoại Thương (Cơ sở phía Bắc)        NaN         NaN\n",
+       "2                             Đại Học Sư Phạm Hà Nội 2        NaN         NaN\n",
+       "3          Đại Học Ngoại Ngữ – Đại Học Quốc Gia Hà Nội        NaN         NaN\n",
+       "4                             Đại Học Kinh Tế Quốc Dân  20.999746  105.843497\n",
+       "..                                                 ...        ...         ...\n",
+       "283  Trường Sĩ Quan Thông Tin - Hệ Dân Sự - Đại Học...        NaN         NaN\n",
+       "284   Đại Học Lâm Nghiệp (Cơ sở 3) - Phân hiệu Gia Lai        NaN         NaN\n",
+       "285                                        Đại học CMC  20.980187  105.766290\n",
+       "286                                  Đại học Ngô Quyền  20.843096  106.697770\n",
+       "287                                                     15.926666  107.965086\n",
+       "\n",
+       "[288 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_geo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c9765986",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_geo.to_csv(\"Data/Final/school_latlon.csv\", index=False)"
    ]
   }
  ],
