--- a/Source/crawl_diem_chuan.ipynb
+++ b/Source/crawl_diem_chuan.ipynb
@@ -5,7 +5,7 @@
    "id": "c756ed08",
    "metadata": {},
    "source": [
-    "# Crawl điểm từ trang web tuyển sinh 247"
+    "# Crawl điểm chuẩn từ trang web tuyển sinh 247"
    ]
   },
   {
