update new files

--- a/Source/Data Preprocessing.ipynb
+++ b/Source/Data Preprocessing.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 156,
+   "cell_type": "markdown",
    "id": "47bc8649",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# %pip install fuzzywuzzy"
+    "# Tiền xử lý dữ liệu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fa994167",
    "metadata": {},
    "outputs": [
@@ -4600,6 +4598,373 @@
    "outputs": [],
    "source": [
     "df_geo.to_csv(\"Data/Final/school_latlon.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "320e350e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Current directory tree:\n",
+      "./\n",
+      "    README.md\n",
+      "    .git/\n",
+      "        COMMIT_EDITMSG\n",
+      "        config\n",
+      "        description\n",
+      "        FETCH_HEAD\n",
+      "        HEAD\n",
+      "        index\n",
+      "        ORIG_HEAD\n",
+      "        hooks/\n",
+      "            applypatch-msg.sample\n",
+      "            commit-msg.sample\n",
+      "            fsmonitor-watchman.sample\n",
+      "            post-update.sample\n",
+      "            pre-applypatch.sample\n",
+      "            pre-commit.sample\n",
+      "            pre-merge-commit.sample\n",
+      "            pre-push.sample\n",
+      "            pre-rebase.sample\n",
+      "            pre-receive.sample\n",
+      "            prepare-commit-msg.sample\n",
+      "            push-to-checkout.sample\n",
+      "            sendemail-validate.sample\n",
+      "            update.sample\n",
+      "        info/\n",
+      "            exclude\n",
+      "        logs/\n",
+      "            HEAD\n",
+      "            refs/\n",
+      "                heads/\n",
+      "                    main\n",
+      "                remotes/\n",
+      "                    origin/\n",
+      "                        HEAD\n",
+      "                        main\n",
+      "                        nguyen\n",
+      "                        Rawdata\n",
+      "        objects/\n",
+      "            00/\n",
+      "                0ee064cda044273b1fccc2f5e3e72af927a4cb\n",
+      "            01/\n",
+      "                5a9495bac09ed86050f8673a07f9c15f63faf8\n",
+      "            05/\n",
+      "                00d7fe686d76524b907a2bf706256412705689\n",
+      "                6302fc3a249fa56f2b87a23881dd252fef95d3\n",
+      "                9527b77c9acca79882965fb81c50ffc13faed3\n",
+      "            06/\n",
+      "                6a227a7f0767609e8af855388dff83fe891d3f\n",
+      "            07/\n",
+      "                5a719198750cf963c49d5beb8433a8a4b7828e\n",
+      "            08/\n",
+      "                e7da940e5ce3ad206b010175e5687ac755ff4e\n",
+      "            0b/\n",
+      "                d6d22fa76d5fb80431ed8bd7a16041a389d29d\n",
+      "            0c/\n",
+      "                42e502e54ae33571fe98f6e854fa427c2491f5\n",
+      "            0d/\n",
+      "                00693c69dca35094be2c74c888f4ca6494484d\n",
+      "            0e/\n",
+      "                f5cbeade30a6851728329b3346f39f156e23bb\n",
+      "            11/\n",
+      "                7b5bd226893d00accac13382e0d2da7a940497\n",
+      "            14/\n",
+      "                8b5a1b223a61e7372ed0242777ab6a58a46c9b\n",
+      "            16/\n",
+      "                db70c77536a88e7380ee96f28f59c6d66e7f0a\n",
+      "            17/\n",
+      "                2b0a80b580f8d4b84f59cd639ff2cac2423162\n",
+      "                e0396128e4e5c47afb5e0c400546b4e4de3d37\n",
+      "            19/\n",
+      "                7d07ad515b595f747accadde6b675e4e37b963\n",
+      "            1a/\n",
+      "                0c7ca1b7f0625775d24c28cd646ce9fb662dce\n",
+      "            21/\n",
+      "                afc2cb4fbd1fd4cda3f67a353ef66318e1c7dd\n",
+      "            27/\n",
+      "                9eacd497fa1eca188b782fef63ea66a31e4dc3\n",
+      "            29/\n",
+      "                642cfd6b1306c774fbea645f1f7c9ed2a03a61\n",
+      "            2a/\n",
+      "                da9f8089666d96205b451d12a362c60f8d33fd\n",
+      "            2c/\n",
+      "                7b6fc9b64b0ad0e3ccca58665fff2c98b564d0\n",
+      "                90de21d34e07e9eae4ef795f7ce5fcaae3b5fd\n",
+      "            2d/\n",
+      "                289fdb3fe504580777caef991b2ab0c6ed6e5f\n",
+      "            2e/\n",
+      "                e9feebb190f441dce190061be6075976af6f2d\n",
+      "            2f/\n",
+      "                e7eb9e0a54f92682b9ec0a0d870fecb5e90a66\n",
+      "            31/\n",
+      "                917d49a727d9714c9d1c287ee7f8855abaa5df\n",
+      "            33/\n",
+      "                dd9c757d394930b23639c28dd7c16e33a7ef73\n",
+      "            34/\n",
+      "                3a453ee93d15d297f61326bc33d6f3f7ea74b2\n",
+      "            35/\n",
+      "                547559247a8c70257616d1f47b884815927832\n",
+      "            36/\n",
+      "                59e024b541b4182baf7645db5dc594e8224105\n",
+      "            37/\n",
+      "                fd3b9174a8f94f739c4521367bd8203e7b0625\n",
+      "            3c/\n",
+      "                39b974b6fc1b374a1902277f34f2c0cf94c2f1\n",
+      "            3d/\n",
+      "                0d7b34c7d0c4008c949d67bf2027529656e8a0\n",
+      "                e1eb3a43722cbc09fab247e154016eb1baed63\n",
+      "            3f/\n",
+      "                bab30a0626882b08a32f6603fd78f988b4158c\n",
+      "            40/\n",
+      "                ea064ba4573cadf98037b164bea2b28ff24850\n",
+      "            41/\n",
+      "                b21975e59ebb97efcd26cf32b6ee4b7ebf5dce\n",
+      "            44/\n",
+      "                c47d3f99037632fe00f9791088e66d81dee6de\n",
+      "            45/\n",
+      "                0c12f05d5bb7c248ba455000f957f1639109c4\n",
+      "            47/\n",
+      "                791116f4e021ac7972ecfef2ba25834581fbf0\n",
+      "            49/\n",
+      "                53c647c54a03328937a49b4a983a806ef50fc3\n",
+      "                d06258401adc0f26a4fbeec2ff639ae13c61ba\n",
+      "            4d/\n",
+      "                2303f37feefaa93f507ec7493e8b22e30de041\n",
+      "            50/\n",
+      "                809819d7a0248ef63d001c0506249d39ec95c1\n",
+      "            53/\n",
+      "                265e2259fb42875a38c50032809dab4760d2b7\n",
+      "            55/\n",
+      "                4273f9ca4be436ef99bcd7873405fe6076551b\n",
+      "                dc585f750ea6d2ec5cc646cc884d4a1c655bdf\n",
+      "            59/\n",
+      "                5341c53fe4d0c312f40dee8e939ce6928e640e\n",
+      "            5a/\n",
+      "                c0e5cf899b44b2bf3161bc0638ea4f08ea7424\n",
+      "            5b/\n",
+      "                7c528de49f1dcd7f006c6332dd2bed29cc537b\n",
+      "                dea07ec2be8ab8f660b76816e7ac1827f793c9\n",
+      "                ed455684b54e5c4a327aec0fbb0d2844d1dcda\n",
+      "            5d/\n",
+      "                5006d3c193e1b3aa5a31bbfaffbcf2ec3d8e2e\n",
+      "                57c25a28363ed737ebbbd1606999b90b3c3d6f\n",
+      "                7f32bca65074c8a6342713bbd04ebb935ef018\n",
+      "            60/\n",
+      "                39bdbd988bb4881df0e3799e970c48e00d1f44\n",
+      "            61/\n",
+      "                03efaf1e23a90316790f77b649b72255f90612\n",
+      "            62/\n",
+      "                d3dbc49e01927ceea6d29de373db059dbde556\n",
+      "            64/\n",
+      "                9e80665f466ba0836e97a3a507b7e2caebda2c\n",
+      "            66/\n",
+      "                2a8da2bf8f2ff85b0713a2b68a413b6ed3bf5c\n",
+      "            6a/\n",
+      "                60adc70c4b2b39eae78d09aa2828e966f2f546\n",
+      "                b6ce3ede964305eabe67a025f28a5b9321fc83\n",
+      "            6b/\n",
+      "                77c040f329439e044114b5f0e1fbda73b4da16\n",
+      "            6d/\n",
+      "                04ab79b9791b84a51fffc84e0fd10e52c56015\n",
+      "            6f/\n",
+      "                a6f774a8327a1a55f24e02ee4d79cfe6fd33a5\n",
+      "            71/\n",
+      "                fe1db3846694a73c074cc7197ab049cf07e81b\n",
+      "            72/\n",
+      "                bb5b4b736a6702f639c9bcffb1879d2378ffcd\n",
+      "            76/\n",
+      "                079a948e730b47dd0713e587c0898df12daa09\n",
+      "            79/\n",
+      "                234f38843aa062225ed00064ec2924d6161f85\n",
+      "            7d/\n",
+      "                a5592b020a8e0967985bbbb47c98a303d01ee6\n",
+      "            7e/\n",
+      "                fd18ca85dba3670ed3723156f254739af9da2b\n",
+      "            81/\n",
+      "                12000c9d6a904abb2a5a88700c0ec836e6e9fe\n",
+      "            86/\n",
+      "                25ab771eee109199fc16f872a6cc70667ac657\n",
+      "                3e4a37dc6405e166e81a1566dfdc0aa1a23b15\n",
+      "                a89929176fca5b94ab629098557a0d429610ca\n",
+      "                d90add3a09a3851c7ddf98bdaa0265761d30f9\n",
+      "            88/\n",
+      "                89384cf4c300800cd746412d6c6eba32adbb56\n",
+      "            8e/\n",
+      "                bfb031cb7eb1b5965231440403e4a9822d0177\n",
+      "            94/\n",
+      "                327d07111bf60b1655aaad52a5640f26924454\n",
+      "                56a806ce95dd821dc17c50122d9ae83c799565\n",
+      "                5855af6d42e883c6e9857d25e74d622d76b166\n",
+      "                be4cf86b429f77896f4636e475007493799098\n",
+      "            95/\n",
+      "                505d4121f2f1af8ceb4c4d81b7221e3f7d8224\n",
+      "            9b/\n",
+      "                47ea3d2d11c5ea00b9571258d570afb125f08a\n",
+      "            9c/\n",
+      "                71c77fd4e4a883d2d9d520505e996e32c1616c\n",
+      "                c66e6e265deb30af07204694c37b6bce1942b9\n",
+      "            9e/\n",
+      "                98fbbe63573dad235476723d5bbe806be24295\n",
+      "            a3/\n",
+      "                83ce42d75f9653ee4cb576cbb99866272c78c3\n",
+      "            a6/\n",
+      "                e7768c63de0e67aa1966e6c778232742353d16\n",
+      "            a9/\n",
+      "                4c0c052b4144a268bbbf02313c83fd462d0b6b\n",
+      "            aa/\n",
+      "                ef315d1ed4effa5eac9e2f66dea54b34f3a995\n",
+      "            ab/\n",
+      "                51b44ec0ca5effd2f9ac477224ff2e91e41522\n",
+      "            ad/\n",
+      "                5471553bd2a26a8a4a5a45663afdab34e6b178\n",
+      "            ae/\n",
+      "                9c54baa9e5d84d8a14ce42c3e9e42f3aad9445\n",
+      "            b0/\n",
+      "                057bc64da623e58fc250f282fe1d48555aacb2\n",
+      "            b1/\n",
+      "                db92838c673be0113ed446dff51454d3383e75\n",
+      "                f6879de28ade3398f2f0592f52bdd7ea7f83e2\n",
+      "            b3/\n",
+      "                b825289d4cbf02c1424d8e1a29ce07c2282973\n",
+      "            ba/\n",
+      "                9e98d1d0a73e1e565d2cd484d9c4c67267b1eb\n",
+      "            be/\n",
+      "                ba8184891a08660722be42d1288966e8295f85\n",
+      "                ed8b8340f1704e29ff4ac646278890fed10f19\n",
+      "            bf/\n",
+      "                3fa0c1b4712481f229b56ea5593ea988b0cab0\n",
+      "            c0/\n",
+      "                5a97024720dd34f2e7db4725cf1b577a20b258\n",
+      "                683fddecf2866a8317c66195f35858b09bfc8f\n",
+      "            c8/\n",
+      "                03663e1a31cd613cc6cad0fa95aadae613b453\n",
+      "            c9/\n",
+      "                9dcb70d72395cb1e8381b972a774f5adab253b\n",
+      "            ce/\n",
+      "                9202dec770f5a5b089b701be5fe8a5505b9876\n",
+      "                967ae78652ca30f1bddeeac070cbb507cc7786\n",
+      "            cf/\n",
+      "                09d2c080a6deb1382ae630e778e215149d23ec\n",
+      "            d1/\n",
+      "                87a20272c62fc1fc38b9d3fb9091f809f2f84e\n",
+      "                973fb2401ef173f2b7e006214e51b6cd770dce\n",
+      "                b73c84811340af433078f05b911084a7653fa4\n",
+      "            d4/\n",
+      "                253d3128fbb70e48718ec429b0a10033d142de\n",
+      "                e2783551d90761a6a9915f1b2489b6874fa973\n",
+      "            d9/\n",
+      "                3ece580f2fa1ba84cc50909782cb20e177da5b\n",
+      "                670421b431b2a98b070b1d0739c24ddee2f0bd\n",
+      "            db/\n",
+      "                35f9584e1f8afe7c6b01e99e1939fd8ca10b75\n",
+      "            dc/\n",
+      "                33ca300f5705c0bbd303cfc253f6f87757c331\n",
+      "            e0/\n",
+      "                e9bd3a06744dcd85f801efd2ad246ca5c74929\n",
+      "            e2/\n",
+      "                edadb193cf69d805b7bacf2d32292e680c7901\n",
+      "            e3/\n",
+      "                144abc7ff5217a5917ea885020c83819413ce2\n",
+      "            e6/\n",
+      "                3c69a94cd569d4c97d49bdc6fb052a78424496\n",
+      "            e7/\n",
+      "                69c3eaad9f3decd8c0e98fb4d53e03790323c1\n",
+      "            e8/\n",
+      "                2f123e0baeed64bae0e6635a9efa44ba233a37\n",
+      "                2fdf0aa872254b685af88bdb64e03343efed67\n",
+      "            e9/\n",
+      "                3b147f90618cc12ed5d679ee1174effec4effb\n",
+      "            ed/\n",
+      "                c24e55bb22d769c1d22af8cde5ba04b161ca9e\n",
+      "            ef/\n",
+      "                28311cd65c63d1cffc87734caab632bfff0192\n",
+      "            f0/\n",
+      "                18b5736358624a5bba05cd54942abf3a1c927a\n",
+      "            f1/\n",
+      "                70c6e4e25e8034f349ce066426ae56cf22abd2\n",
+      "            f7/\n",
+      "                c54227667651e37f1e18ce12340e67f9148eef\n",
+      "            fd/\n",
+      "                862c6b2be7698a28fde8da7b4efda5fbbadbec\n",
+      "            fe/\n",
+      "                39e563bae3a6a16628854cbc286a4505ce0e0e\n",
+      "            info/\n",
+      "            pack/\n",
+      "        refs/\n",
+      "            heads/\n",
+      "                main\n",
+      "            remotes/\n",
+      "                origin/\n",
+      "                    HEAD\n",
+      "                    main\n",
+      "                    nguyen\n",
+      "                    Rawdata\n",
+      "            tags/\n",
+      "    Data/\n",
+      "        diemchuan_full_18-23.xlsx\n",
+      "        diemthi.csv\n",
+      "        diem_chuan_2018-2023_full.csv\n",
+      "        diem_chuan_2024_backup.csv\n",
+      "        diem_chuan_2024_final.csv\n",
+      "        diem_chuan_2024_full.csv\n",
+      "        diem_chuan_full.csv\n",
+      "        mapping_ten_truong.csv\n",
+      "        nganh_dao_tao_backup_2.csv\n",
+      "        nganh_dao_tao_final_2.csv\n",
+      "        Final/\n",
+      "            diem_chuan_full.csv\n",
+      "            school_latlon.csv\n",
+      "        Model Data/\n",
+      "            dan_nhan_2021.csv\n",
+      "            diemchuan2021.csv\n",
+      "            diemchuan2022.csv\n",
+      "            diemchuan2023.csv\n",
+      "            diemchuan2024.csv\n",
+      "            diemchuan_ABCD(2).csv\n",
+      "            diemthi2021.csv\n",
+      "            diemthi2022.csv\n",
+      "            diemthi2023.csv\n",
+      "            diemthi2024.csv\n",
+      "            diemthi_tonghop2021.csv\n",
+      "            diemthi_tonghop2022.csv\n",
+      "            diemthi_tonghop2023.csv\n",
+      "            diemthi_tonghop2024.csv\n",
+      "            tohop_mon.csv\n",
+      "            tonghop_diem.csv\n",
+      "    model/\n",
+      "        clf_multilabel.pkl\n",
+      "        mlb_majors.pkl\n",
+      "        reduced_df.csv\n",
+      "        score.pkl\n",
+      "    Source/\n",
+      "        crawl_diem_chuan.ipynb\n",
+      "        crawl_diem_thi.ipynb\n",
+      "        dashboard.py\n",
+      "        Data Preprocessing.ipynb\n",
+      "        Labelling.ipynb\n",
+      "        model.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in cây thư mục hiện tại\n",
+    "def print_directory_tree(path='.'):\n",
+    "    for root, dirs, files in os.walk(path):\n",
+    "        level = root.replace(path, '').count(os.sep)\n",
+    "        indent = ' ' * 4 * (level)\n",
+    "        print(f\"{indent}{os.path.basename(root)}/\")\n",
+    "        subindent = ' ' * 4 * (level + 1)\n",
+    "        for f in files:\n",
+    "            print(f\"{subindent}{f}\")\n",
+    "\n",
+    "print(\"📂 Current directory tree:\")\n",
+    "print_directory_tree()"
    ]
   }
  ],
